...
                android:hint="@string/title"
                android:maxWidth="488dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/task_manager_title_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:singleLine="false" />
            </com.google.android.material.textfield.TextInputLayout>
...
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/task_list" />

                    <Button
                        android:id="@+id/add_to_list_button"
                        style="@style/Widget.Material3.Button.TonalButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> fragment.addToListClicked()}"
                        android:text="@string/add_to_list"
                        app:icon="@drawable/ic_add" />
...
                    android:hint="@string/task_title"
                    android:visibility="gone"
                    android:layout_marginTop="4dp"
                    tools:visibility="visible">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/task_title_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:importantForAutofill="no"
                        android:inputType="textCapSentences"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> fragment.closeAddToList()}"
                        android:text="@string/close" />

                    <Button
                        android:id="@+id/add_task"
                        style="@style/Widget.Material3.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> fragment.addTask()}"
                        android:text="@string/add" />
                </LinearLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tasks_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingHorizontal="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> fragment.close()}"
                    android:text="@string/go_back" />

                <Button
                    android:id="@+id/save_button"
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> fragment.saveTaskManager()}"
                    android:text="@string/save"
                    app:enabledWithList="@{addTasksViewModel.taskList}" />
...
