<resources>
    <string name="to_do_list">To-Do List</string>
    <string name="project">Project</string>
    <string name="task_title">Task Title</string>
    <string name="add_to_list">Add To List</string>
    <string name="task_list">Task List</string>
    <string name="contributor_name">Contributor name</string>
    <string name="add_new_task">Add new task</string>
    <string name="to_do_lists">To-Do Lists</string>
    <string name="projects">Projects</string>
    <string name="personal_todo_list">Personal To-Do List</string>
    <string name="todo_list">To-Do List</string>
    <string name="group_project">Group project</string>
    <string name="no_pending_tasks">Complete!</string>
    <plurals name="pending_tasks">
        <item quantity="one">1 Pending Task</item>
        <item quantity="other">%d Pending Tasks</item>
    </plurals>
    <string name="tasks">Tasks</string>
    <string name="new_todo">New To-Do List</string>
    <string name="new_project">New Project</string>
    <string name="new_task">New Tasks</string>
    <string name="go_back">Go back</string>
    <string name="edit_list">Edit list</string>
    <string name="editing_task_manager">Editing %s</string>
    <string name="delete_list">Delete list</string>
    <string name="delete_trip_confirmation_message">Do you want to delete this list</string>
    <string name="no_tasks_here">No tasks here!</string>
    <string name="add_people">Add people</string>
    <string name="contributors">Contributors</string>
</resources>