<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tasks_nav_graph"
    app:startDestination="@id/taskManagerListFragment">

    <include app:graph="@navigation/contacts_manager_navigation_graph" />

    <fragment
        android:id="@+id/addTaskManagerFragment"
        android:name="com.planner.feature.tasks.fragment.AddTaskManagerFragment"
        android:label="@string/new_task">
        <action
            android:id="@+id/action_addTaskManagerFragment_to_taskManagerListFragment"
            app:destination="@id/taskManagerListFragment"
            app:popUpTo="@id/tasks_nav_graph"
            app:popUpToInclusive="true" />
        <argument
            android:name="selectedManagerType"
            android:defaultValue="TODO_LIST"
            app:argType="com.planner.core.data.entity.TaskManagerType" />
        <action
            android:id="@+id/action_addTaskManagerFragment_to_taskManagerDetailFragment"
            app:destination="@id/taskManagerDetailFragment"
            app:popUpTo="@id/taskManagerDetailFragment"
            app:popUpToInclusive="true" />
        <deepLink app:uri="android-app://com.planner.tasks/addTaskManagerFragment" />
        <argument
            android:name="taskManagerId"
            android:defaultValue="-1L"
            app:argType="long" />
        <action
            android:id="@+id/action_addTaskManagerFragment_to_contacts_manager_navigation_graph"
            app:destination="@id/contacts_manager_navigation_graph" />
    </fragment>
    <fragment
        android:id="@+id/taskManagerListFragment"
        android:name="com.planner.feature.tasks.fragment.TaskManagerPageFragment"
        android:label="@string/tasks"
        tools:layout="@layout/fragment_task_manager_page">
        <action
            android:id="@+id/action_taskManagerListFragment_to_addTaskManagerFragment"
            app:destination="@id/addTaskManagerFragment" />
        <argument
            android:name="managerType"
            android:defaultValue="TODO_LIST"
            app:argType="com.planner.core.data.entity.TaskManagerType" />
        <action
            android:id="@+id/action_taskManagerListFragment_to_taskManagerDetailFragment"
            app:destination="@id/taskManagerDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/taskManagerDetailFragment"
        android:name="com.planner.feature.tasks.fragment.TaskManagerDetailFragment"
        android:label="fragment_task_manager_detail"
        tools:layout="@layout/fragment_task_manager_detail">
        <action
            android:id="@+id/action_taskManagerDetailFragment_to_taskManagerListFragment"
            app:destination="@id/taskManagerListFragment"
            app:popUpTo="@id/taskManagerListFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_taskManagerDetailFragment_to_addTaskManagerFragment"
            app:destination="@id/addTaskManagerFragment" />
        <argument
            android:name="taskManagerId"
            android:defaultValue="-1L"
            app:argType="long" />
        <deepLink app:uri="android-app://com.planner.tasks/taskManagerDetailFragment?taskManagerId={taskManagerId}" />
    </fragment>
</navigation>